WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199268
REGRESSION (touch-action): Can't scroll vertically when touching a horizontally-scrollable element on instagram.com
https://bugs.webkit.org/show_bug.cgi?id=199268
Summary
REGRESSION (touch-action): Can't scroll vertically when touching a horizontal...
Antti Koivisto
Reported
2019-06-27 05:22:15 PDT
We miscompute touch-action as 'none'.
Attachments
patch
(5.53 KB, patch)
2019-06-27 05:36 PDT
,
Antti Koivisto
graouts
: review+
Details
Formatted Diff
Diff
patch
(5.53 KB, patch)
2019-06-27 05:54 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2019-06-27 05:23:06 PDT
<
rdar://problem/52246473
>
Antoine Quint
Comment 2
2019-06-27 05:34:33 PDT
Is this related to
https://bugs.webkit.org/show_bug.cgi?id=199269
?
Antti Koivisto
Comment 3
2019-06-27 05:36:05 PDT
Created
attachment 373022
[details]
patch
Antoine Quint
Comment 4
2019-06-27 05:39:51 PDT
***
Bug 199269
has been marked as a duplicate of this bug. ***
Antti Koivisto
Comment 5
2019-06-27 05:54:57 PDT
Created
attachment 373023
[details]
patch
WebKit Commit Bot
Comment 6
2019-06-27 06:32:39 PDT
Comment on
attachment 373023
[details]
patch Clearing flags on attachment: 373023 Committed
r246879
: <
https://trac.webkit.org/changeset/246879
>
WebKit Commit Bot
Comment 7
2019-06-27 06:32:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug