REGRESSION (touch-action): Can't scroll vertically when touching a horizontally-scrollable element on instagram.com https://bugs.webkit.org/show_bug.cgi?id=199268 <rdar://problem/52246473>

Reviewed by Antoine Quint.

Source/WebCore:

Test: pointerevents/ios/touch-action-region-manipulation.html

Having a restrictive touch-action value like 'pan-y' on on element and then having a descendant with
'touch-action: manipulation' computes to 'none'.

* css/StyleResolver.cpp:
(WebCore::computeEffectiveTouchActions):

For value 'manipulation' return the current effective value, similar to the reverse case above.
Set intersection should only be computed out of restrictive values (pan-x/pan-y/pinch-zoom/none).

LayoutTests:

* pointerevents/ios/touch-action-region-manipulation-expected.txt: Added.
* pointerevents/ios/touch-action-region-manipulation.html: Added.


Canonical link: https://commits.webkit.org/213222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@246879 268f45cc-cd09-0410-ab3c-d52691b4dbfc